[gd_scene load_steps=9 format=2]

[ext_resource path="res://Prefabs/Enemies/Mobs/Slimes/Sprites/slimeGreen.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Enemies/Mobs/Slimes/Slime.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/Enemies/Mobs/Slimes/Sprites/slimeGreen_walk.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "preparing",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.75, 4.5 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 15.0

[sub_resource type="Animation" id=4]
resource_name = "Default"
tracks/0/type = "value"
tracks/0/path = NodePath("SlimeBody/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}

[sub_resource type="Animation" id=5]
resource_name = "Preparing"
length = 0.7
loop = true
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("SlimeBody/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "default", "preparing", "default", "preparing" ]
}

[node name="Slime" type="Node2D"]
script = ExtResource( 2 )
walk_speed = -100

[node name="SlimeBody" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="AnimatedSprite" type="AnimatedSprite" parent="SlimeBody"]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeBody"]
position = Vector2( 0, 12.5 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="SlimeBody"]
collision_layer = 2
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlimeBody/Area2D"]
position = Vector2( 0, 5 )
rotation = -1.5708
shape = SubResource( 3 )

[node name="PrepTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 4 )
anims/Preparing = SubResource( 5 )

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PrepTimer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
